hide on breakpoints s and xs img, fix spacing

--- a/src/components/HeroSection/HeroSection.module.scss
+++ b/src/components/HeroSection/HeroSection.module.scss
@@ -2,10 +2,26 @@
 
 .heroSection {
 	width: 100vw;
-	height: 100vh;
+	min-height: 91vh;
 
 	@include flexbox;
 	@include align-items(center);
+
+	@include breakpoint('s') {
+		@include flexbox(column);
+		@include align-items(flex-start);
+	}
+
+	.imgWrapper {
+		@include underlay(underlayedImg);
+	}
+	.hideMobile {
+		display: none;
+	}
+
+	@include breakpoint('s') {
+		min-height: auto;
+	}
 }
 
 .heroLeft {
@@ -14,6 +30,10 @@
 	margin-right: pxToRem(65px);
 	@include flexbox(column);
 	@include justify-content(center);
+
+	.imgMobile {
+		display: none;
+	}
 
 	.highlight {
 		color: $text-highlight-color;
@@ -45,6 +65,20 @@
 			margin-bottom: pxToRem(90px);
 		}
 	}
+	
+	@include breakpoint('s') {
+		margin-top: 5rem;
+		width: 100%;
+
+		button {
+			margin-bottom: pxToRem(40px);
+		}
+
+		.imgMobile {
+			display: block;
+			margin-bottom: pxToRem(57px);
+		}
+	}
 }
 
 .heroRight {
@@ -52,10 +86,6 @@
 	height: 100%;
 	@include flexbox(column);
 	@include justify-content(center);
-
-	.imgWrapper {
-		@include underlay(underlayedImg);
-	}
 
 	.heroDetails {
 		margin-top: pxToRem(152px);
@@ -85,6 +115,14 @@
 					width: 21px;
 				}
 			}
+		}
+	}
+
+	@include breakpoint('s') {
+		width: 100%;
+		.heroDetails{
+			margin-top: pxToRem(25.5px);
+			margin-bottom: pxToRem(39px);
 		}
 	}
 }
